Fixed incorrect video container clipping detection

--- a/src/app/components/video-player/video-player.component.css
+++ b/src/app/components/video-player/video-player.component.css
@@ -126,8 +126,12 @@
 
 /* Video player contents. */
 .player-contents {
+  display: none;
   overflow: hidden;
   position: relative;
+}
+.player-contents.loaded {
+  display: flex;
 }
 
 /* Video player video player. */
